--- a/example/Enter.Dashboard/Pages/Index.razor
+++ b/example/Enter.Dashboard/Pages/Index.razor
@@ -156,7 +156,7 @@
     public List<Users> AutoCompleteDataSource { get; set; } = Constants.Users;
 
     [Inject]
-    public IModalService ModalService { get; set; }
+    public IEntModalService ModalService { get; set; }
 
     [Inject]
     public IEntToastService ToastService { get; set; }
