--- a/src/Enter.UI/Components/Animator/EntAnimator.razor
+++ b/src/Enter.UI/Components/Animator/EntAnimator.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 <div 
     @ref="Reference"
      @onanimationend="EventUtil.AsNonRenderingEventHandler(OnAnimationEndCallback)"
