--- a/src/Enter.UI/Components/Card/EntCard.razor
+++ b/src/Enter.UI/Components/Card/EntCard.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Core
-@inherits EntBaseComponent
+@inherits EntComponentBase
 
 <div @attributes="@AdditionalAttributes" class="@RootClass" >
     @if (Title != null)
