--- a/src/Enter.UI/Components/Drawer/EntDrawer.razor
+++ b/src/Enter.UI/Components/Drawer/EntDrawer.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.UI.Components
 <aside class="@RootCss">@ChildContent</aside>
 @using Enter.UI.Abstractions.Components.Drawer
-@inherits EntBaseComponent
+@inherits EntComponentBase
 @code {
 
     public string RootCss => CssClassBuilder
