--- a/src/Enter.UI/Components/Drawer/EntDrawerContainer.razor
+++ b/src/Enter.UI/Components/Drawer/EntDrawerContainer.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 <div class="@RootCss">@ChildContent</div>
-@inherits EntBaseComponent
+@inherits EntComponentBase
 @code {
 
     public string RootCss => CssClassBuilder
