--- a/src/Enter.UI/Components/Expanable/EntExpandable.razor
+++ b/src/Enter.UI/Components/Expanable/EntExpandable.razor
@@ -3,7 +3,7 @@
 @using Enter.UI.Abstractions.Components.Animator
 @using Enter.UI.Abstractions.Components.Expandable
 @using Enter.UI.Abstractions.JsServices
-@inherits EntBaseComponent
+@inherits EntComponentBase
 
 <EntAnimator
         @attributes="@AdditionalAttributes"
