--- a/src/Enter.UI/Components/Inputs/EntInputText.razor
+++ b/src/Enter.UI/Components/Inputs/EntInputText.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
 @using Enter.UI.Abstractions.Components.Inputs
-@inherits EntBaseInput<string?>
+@inherits EntInputBase<string?>
 @implements IAsyncDisposable
 
 <div @attributes="@AdditionalAttributes" class="@RootCss" id="@Id">
