--- a/src/Enter.UI/Components/List/EntList.razor
+++ b/src/Enter.UI/Components/List/EntList.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 <ul @attributes="@AdditionalAttributes" class="@RootCss">
   
     @ChildContent
