--- a/src/Enter.UI/Components/Popover/EntPopoverProvider.razor
+++ b/src/Enter.UI/Components/Popover/EntPopoverProvider.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 @using Enter.UI.Abstractions.Services
 @implements IAsyncDisposable
 <div class="@RootClass">
