--- a/src/Enter.UI/Components/Table/EntTable.razor
+++ b/src/Enter.UI/Components/Table/EntTable.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 @typeparam T
 <CascadingValue Value="this">
     <table @attributes="AdditionalAttributes" class="@RootCss">
