--- a/src/Enter.UI/Components/Toast/EntToastProvider.razor
+++ b/src/Enter.UI/Components/Toast/EntToastProvider.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 @using Enter.UI.Abstractions.Components.Animator
 @using Enter.UI.Abstractions.Components.Text
 @using Enter.UI.Abstractions.Components.Toast
