--- a/src/Enter.UI/Components/TreeView/EntTreeView.razor
+++ b/src/Enter.UI/Components/TreeView/EntTreeView.razor
@@ -3,7 +3,7 @@
 @typeparam TValue
 @using Enter.UI.Abstractions.Components.TreeView
 @using Enter.UI.Abstractions.Core
-@inherits EntBaseComponent  
+@inherits EntComponentBase  
 
 <CascadingValue Value="this" IsFixed="true">
     <ul @attributes="@AdditionalAttributes" class="@RootCss">
