--- a/src/Enter.UI/Components/Utilities/Flex/EntFlex.razor
+++ b/src/Enter.UI/Components/Utilities/Flex/EntFlex.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.UI.Components
 <div class="@RootCss">@ChildContent</div>
 @using Enter.UI.Abstractions.Components.Flex
-@inherits EntBaseComponent
+@inherits EntComponentBase
 @code {
     private readonly string _flexRow = "flex-row";
     public string _flexColumn = "flex-column";
