--- a/src/Enter.UI/Components/Utilities/Space/EntSpace.razor
+++ b/src/Enter.UI/Components/Utilities/Space/EntSpace.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 <div  @attributes="AdditionalAttributes" class="@RootCss" >@ChildContent</div>
-@inherits EntBaseComponent
+@inherits EntComponentBase
 @code {
     private readonly string _flexRow = "flex-row";
     public string _flexColumn = "flex-column";
