--- a/src/Enter.UI/Components/AppBar/EntAppBar.razor
+++ b/src/Enter.UI/Components/AppBar/EntAppBar.razor
@@ -1,4 +1,4 @@
-﻿@inherits EntBaseComponent
+﻿@inherits EntComponentBase
 @namespace Enter.UI.Components
 <div @attributes="@AdditionalAttributes" class="@cssClass">
     @if (ShowToggle)
