--- a/src/Enter.UI/Components/Buttons/EntButton.razor
+++ b/src/Enter.UI/Components/Buttons/EntButton.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Abstractions.Components.Button
-@inherits EntBaseComponent
+@inherits EntComponentBase
 <button @attributes="@AdditionalAttributes" class="@RootClass">
     @if (Icon != null)
     {
