--- a/src/Enter.UI/Components/Inputs/EntInputAutoComplete.razor
+++ b/src/Enter.UI/Components/Inputs/EntInputAutoComplete.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
-@inherits EntBaseInput<string>
+@inherits EntInputBase<string>
 @typeparam T
 <div @attributes="@AdditionalAttributes" class="@RootClass"  @ref="_elementReference" id="@Id">
     <EntInputText @ref="_inputReference" EventType="oninput" class="@( "ent-input-autocomplete-input")" 
