--- a/src/Enter.UI/Components/Inputs/EntInputFile.razor
+++ b/src/Enter.UI/Components/Inputs/EntInputFile.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
-@inherits EntBaseInput<string?>
+@inherits EntInputBase<string?>
 @implements IAsyncDisposable
 
 <div @attributes="@AdditionalAttributes" class="@RootCss" id="@Id">
