--- a/src/Enter.UI/Components/Inputs/EntInputGroup.razor
+++ b/src/Enter.UI/Components/Inputs/EntInputGroup.razor
@@ -2,7 +2,7 @@
 @using System.Linq.Expressions
 
 @typeparam TValue;
-@inherits EntBaseComponent
+@inherits EntComponentBase
 
 <div @attributes="@AdditionalAttributes" class="@RootCss" id="@Id">
     @if(Label != null)
