--- a/src/Enter.UI/Components/Inputs/EntInputSelect.razor
+++ b/src/Enter.UI/Components/Inputs/EntInputSelect.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
-@inherits EntBaseInput<string>
+@inherits EntInputBase<string>
 @typeparam T
 
 <div @attributes="@AdditionalAttributes" @ref="_elementReference" class="@RootCss" id="@Id">
