--- a/src/Enter.UI/Components/List/EntListItem.razor
+++ b/src/Enter.UI/Components/List/EntListItem.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 <li @attributes="@AdditionalAttributes" class="@RootCss">
 
     @ChildContent
