--- a/src/Enter.UI/Components/Modal/EntMessageBox.razor
+++ b/src/Enter.UI/Components/Modal/EntMessageBox.razor
@@ -2,7 +2,7 @@
 @using Enter.UI.Abstractions.Components.Modal
 @using Enter.UI.Abstractions.Components.Text
 @using Enter.UI.Abstractions.Components.Button
-@inherits EntBaseComponent
+@inherits EntComponentBase
  <div class="@RootCss" >
      <EntText Type="EntTextType.Bold" class="ent-messagebox-title">@Message</EntText>
      <div class="ent-messagebox-action">
