--- a/src/Enter.UI/Components/Modal/EntModal.razor
+++ b/src/Enter.UI/Components/Modal/EntModal.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Abstractions.Components.Modal
-@inherits EntBaseComponent
+@inherits EntComponentBase
 <div class="ent-modal-container" @onclick="OnContainerClick">
                 <div class="@RootCss" @onclick:stopPropagation="true" @onclick="OnModalClick">
                     <div class="ent-modal-header">
