--- a/src/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
+++ b/src/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 <div @attributes="AdditionalAttributes" class="@RootCss" >
     <div class="ent-nav-menu-group-item" @onclick="@ToggleItem">
         @if (Icon != null)
