--- a/src/Enter.UI/Components/NavMenu/EntNavMenuTextItem.razor
+++ b/src/Enter.UI/Components/NavMenu/EntNavMenuTextItem.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 <div @attributes="AdditionalAttributes" class="@RootCss" @onclick="() => Click.InvokeAsync()">
     <EntIcon  class="@IconCss" Icon="@Icon" />
     <span class="@ContentCss">@Text</span>
