--- a/src/Enter.UI/Components/NavMenu/EntNavMenuTitle.razor
+++ b/src/Enter.UI/Components/NavMenu/EntNavMenuTitle.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Abstractions.Components.Text
-@inherits EntBaseComponent
+@inherits EntComponentBase
 
 <EntText Type="EntTextType.Bold" Size="EntTextSize.Subtitle">
     @Title
