--- a/src/Enter.UI/Components/Popover/EntPopover.razor
+++ b/src/Enter.UI/Components/Popover/EntPopover.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Abstractions.Services
-@inherits EntBaseComponent
+@inherits EntComponentBase
 
 <div  @attributes="AdditionalAttributes" class="@RootClass" id="@($"ent-popover-{_id}")">
 
