--- a/src/Enter.UI/Components/Text/EntText.razor
+++ b/src/Enter.UI/Components/Text/EntText.razor
@@ -1,7 +1,7 @@
 @namespace Enter.UI.Components
 
 @using Enter.UI.Abstractions.Components.Text
-@inherits EntBaseComponent
+@inherits EntComponentBase
 
 @switch (Type)
 {
