--- a/src/Enter.UI/Components/Theme/EntThemeProvider.razor
+++ b/src/Enter.UI/Components/Theme/EntThemeProvider.razor
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.JSInterop
 @using Enter.UI.Abstractions.JsServices
 @namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 
 <CascadingValue Value="this" IsFixed="true">
     <div dir="@Direction" class="@RootCss">
