--- a/src/Enter.UI/Components/Toolbar/EntToolbar.razor
+++ b/src/Enter.UI/Components/Toolbar/EntToolbar.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntBaseComponent
+@inherits EntComponentBase
 <CascadingValue Value="@this">
     <div @attributes="AdditionalAttributes" class="@RootCss" >
         @ChildContent
