--- a/src/Enter.UI/Components/Utilities/Division/EntDivision.razor
+++ b/src/Enter.UI/Components/Utilities/Division/EntDivision.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 <div  @attributes="AdditionalAttributes" class="@RootCss">@ChildContent</div>
-@inherits EntBaseComponent
+@inherits EntComponentBase
 @code {
 
 
