--- a/example/Enter.Dashboard/Pages/Counter.razor
+++ b/example/Enter.Dashboard/Pages/Counter.razor
@@ -23,7 +23,7 @@
         currentCount++;
 
         if (currentCount == 3)
-            await MdiTabClose();
+            await MdiTabCloseAsync();
     }
 
     protected override async Task OnMdiTabActivatedAsync(string tabId)
