--- a/example/Enter.Dashboard/Pages/Index.razor
+++ b/example/Enter.Dashboard/Pages/Index.razor
@@ -52,7 +52,7 @@
                              LaptopAlign="FlexAlign.StartCenter"
                              Align="FlexAlign.StartCenter"
                              Gap="4">
-                        <EntButton @onclick="()=>OpenToast(EntToastType.Success)" type="button" >Success Toast</EntButton>
+                        <EntButton @onclick="()=>OpenToast(EntToastType.Success)" Loading="true" type="button" >Success Toast</EntButton>
                         <EntButton @onclick="()=>OpenToast(EntToastType.Danger)" type="button" >Danger Toast</EntButton>
                         <EntButton @onclick="()=>OpenToast(EntToastType.Info)" type="button" >Info Toast</EntButton>
                     </EntFlex>
